[gd_scene load_steps=8 format=3 uid="uid://23w0l2ox22f4"]

[ext_resource type="Script" uid="uid://b8yvnqi01y1p0" path="res://scripts/bonfire.gd" id="1_7cyym"]
[ext_resource type="Texture2D" uid="uid://7twogww0m64t" path="res://textures/bonfire_empty.png" id="2_wfoe5"]
[ext_resource type="Texture2D" uid="uid://bnw53el0pouln" path="res://textures/Light.tres" id="3_iyjrp"]
[ext_resource type="AudioStream" uid="uid://b5i8nsn5y0oj7" path="res://audio/Bonfire/Lit.wav" id="4_m8cxp"]
[ext_resource type="AudioStream" uid="uid://bk048vptqhid" path="res://audio/Bonfire/Bonfire.wav" id="5_hfgp3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5vw27"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rrxl2"]

[node name="Bonfire" type="Area2D"]
z_index = 1
collision_layer = 4
script = ExtResource("1_7cyym")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_wfoe5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_5vw27")

[node name="FlameLight" type="PointLight2D" parent="."]
visible = false
color = Color(1, 0.5294118, 0.18431373, 1)
energy = 1.76
shadow_enabled = true
texture = ExtResource("3_iyjrp")
texture_scale = 2.43

[node name="StaticBody2D" type="StaticBody2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_rrxl2")

[node name="BonfireLitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_m8cxp")
volume_db = 3.0
bus = &"Bonfire"

[node name="BonfireSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hfgp3")
volume_db = 10.0
max_distance = 200.0
attenuation = 1.6245081
bus = &"Bonfire"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
